@@ -1,7 +1,8 @@
 ChangeLog for SVN maps trunk directory:
 ---------------------------------------------------------------------------
 Guild fixes, enabling to buy again, and manage status through the Oracle.
- python/guilds/README.txt guildbuy.py guild_entry.py guildoracle.py guild_dues.py
+ python/guilds/README.txt guildbuy.py guild_entry.py guildoracle.py
+ guild_dues.py guild_join.py
  python/CFGuilds.py
 -- Ryo 2007-02-11
 
